--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/capstone?useSSL=false&serverTi
 spring.datasource.username=root
 spring.datasource.password=Y7YBdb-30V
 
-# Hibernate
+# Hibernate Properties
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
