--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/capstone?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=Y7YBdb-30V
+spring.main.allow-circular-references: true
 
 # Hibernate Properties
 
